finished the splash section and header

--- a/dest/index.html
+++ b/dest/index.html
@@ -4,14 +4,55 @@
   <!-- Meta -->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ez</title>
+  <title>KIPU</title>
   <!-- Stylesheets -->
   <link rel="stylesheet" href="assets/css/styles.css">
+  <link rel="stylesheet" href="https://use.typekit.net/ldl7lwm.css">
 </head>
 <body>
-<header class="header">
-</header>
-<section>
+  <header class="header">
+    <nav class="nav">
+      <ul class="list list--horizontal">
+        <li class="list__item is-active">
+          <h2>Osteopatia</h2>
+        </li>
+        <li class="list__item">
+          <h2>Cuidados</h2>
+        </li>
+        <li class="list__item">
+          <h2>Que</h2>
+        </li>
+        <li class="list__item">
+          <h2>Quien</h2>
+        </li>
+        <li class="list__item">
+          <h2>Contact</h2>
+        </li>
+      </ul>
+    </nav>
+    <div class="nav flex-container">
+      <a href="#" class="social-icon">
+        <img class="social-icon__img social-icon__twitter" src="assets/img/icons/social-icon__twitter.svg" alt="twitter" title="KIPU Twitter"/>
+      </a>
+      <a href="#" class="social-icon">
+        <img class="social-icon__img social-icon__linkedin" src="assets/img/icons/social-icon__linkedin.svg" alt="linkedin" title="KIPU Linkedin"/>
+      </a>
+      <a href="#" class="social-icon">
+        <img class="social-icon__img social-icon__instagram" src="assets/img/icons/social-icon__instagram.svg" alt="instagram" title="KIPU Instagram"/>
+      </a>
+      <a href="#" class="social-icon">
+        <img class="social-icon__img social-icon__youtube" src="assets/img/icons/social-icon__youtube.svg" alt="youtube" title="KIPU Youtube"/>
+      </a>
+    </div>
+  </header>
+<section class="splash">
+  <div class="splash__content">
+    <h1 class="splash__content__title">
+      Kipu<span class="splash__content__title__comma">,</span><br>
+      <span class="splash__content__title__sub-title">el tacto que te nutre.</span>
+    </h1>
+    <div class="cta">Reservar</div>
+  </div>
 </section>
 <footer class="footer">
 </footer>
