added remaining photos

--- a/dest/index.html
+++ b/dest/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>KIPU</title>
   <!-- Stylesheets -->
-  <link rel="stylesheet" href="assets/css/styles.css?=v5">
+  <link rel="stylesheet" href="assets/css/styles.css?=v8">
   <link rel="stylesheet" href="https://use.typekit.net/ldl7lwm.css">
 </head>
 <body>
@@ -41,18 +41,10 @@
       </ul>
     </nav>
     <div class="nav flex-container">
-      <a href="#" class="social-icon">
-        <img class="social-icon__img social-icon__twitter" src="assets/img/icons/social-icon__twitter.svg" alt="twitter" title="KIPU Twitter"/>
-      </a>
-      <a href="#" class="social-icon">
-        <img class="social-icon__img social-icon__linkedin" src="assets/img/icons/social-icon__linkedin.svg" alt="linkedin" title="KIPU Linkedin"/>
-      </a>
-      <a href="#" class="social-icon">
-        <img class="social-icon__img social-icon__instagram" src="assets/img/icons/social-icon__instagram.svg" alt="instagram" title="KIPU Instagram"/>
-      </a>
-      <a href="#" class="social-icon">
-        <img class="social-icon__img social-icon__youtube" src="assets/img/icons/social-icon__youtube.svg" alt="youtube" title="KIPU Youtube"/>
-      </a>
+      <a href="#" class="social-icon social-icon__img social-icon__whatsapp"></a>
+      <a href="#" class="social-icon social-icon__img social-icon__linkedin"></a>
+      <a href="#" class="social-icon social-icon__img social-icon__instagram"></a>
+      <a href="#" class="social-icon social-icon__img social-icon__youtube"></a>
     </div>
   </header>
 <section class="splash">
@@ -80,6 +72,7 @@
         </div>
       </div>
       <div class="col">
+        <img class="offer__illustration" src="assets/img/illustration__offer.jpg"/>
       </div>
     </div>
     <div class="row">
@@ -174,6 +167,7 @@
 </section>
 <section id="what" class="section textblock what">
   <div class="wrapper">
+    <img class="what__illustration" src="assets/img/illustration__what.jpg"/>
     <div class="flex-container">
       <div class="textblock__content">
         <h3>Que es <span class="highlight--title">Kipu</span></h3>
@@ -186,6 +180,7 @@
   </div>
 </section>
 <section id="who" class="section textblock who">
+  <img class="who__illustration" src="assets/img/illustration__who.jpg"/>
   <div class="wrapper">
     <div class="flex-container">
       <div class="textblock__content">
@@ -202,6 +197,41 @@
   </div>
 </section>
 <footer id="contact" class="footer">
+  <div class="wrapper">
+    <div class="row">
+      <div>
+        <h3 class="footer__address__title">Kipu osteopatia y masaje</h3>
+        <h4 class="footer__address__subtitle">C/ DIPUTACION 199, 08011 BARCELONA</h4>
+        <div class="footer__contact">
+          <div>
+            <h3 class="footer__contact__title">Contáctame</h3>
+            <h4 class="footer__contact__subtitle">ncarranzaghh@gmail.com</h4>
+          </div>
+          <div>
+            <h3 class="footer__hours__title">Horarios</h3>
+            <h4 class="footer__hours__subtitle">
+              LUNES Y JUEVES
+            </h4>
+            <h4 class="footer__hours__subtitle-2">
+              DE 15:00 A 21:00
+            </h4>
+          </div>
+        </div>
+        <div class="meta">
+          <span>Pagar en efectivo o Bizum</span>
+          <div class="flex-container">
+            <a href="#" class="social-icon social-icon__img social-icon__whatsapp"></a>
+            <a href="#" class="social-icon social-icon__img social-icon__linkedin"></a>
+            <a href="#" class="social-icon social-icon__img social-icon__instagram"></a>
+            <a href="#" class="social-icon social-icon__img social-icon__youtube"></a>
+          </div>
+        </div>
+      </div>
+      <div>
+
+      </div>
+    </div>
+  </div>
 </footer>
 <!-- Scripts -->
 <script src="assets/js/keeptrack.js"></script>
