--- a/dest/index.html
+++ b/dest/index.html
@@ -4,9 +4,24 @@
   <!-- Meta -->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>KIPU</title>
+  <meta name="theme-color" content="#c0aee8">
+  <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1" />
+	<link rel="canonical" href="http://kipudeluxe.es/" />
+  <link rel="manifest" href="assets/manifest.json">
+	<meta property="og:locale" content="es_ES" />
+	<meta property="og:type" content="website" />
+	<meta property="og:title" content="Kipu Deluxe" />
+	<meta property="og:url" content="http://kipudeluxe.es/" />
+	<meta property="og:site_name" content="Kipu Deluxe" />
+	<meta property="og:image:width" content="1200" />
+	<meta property="og:image:height" content="630" />
+	<meta name="twitter:card" content="summary_large_image" />
+	<meta name="twitter:label1" content="Escrito por">
+	<meta name="twitter:data1" content="Kipu Deluxe">
+  <title>Kipu Deluxe — OSTEOPATIA & QUIROMASAJE</title>
+  <meta name="description" content="Kipu Deluxe, práctica de osteopatía y masaje, con respeto por el cuerpo y la mente, ubicada en Barcelona.">
   <!-- Stylesheets -->
-  <link rel="stylesheet" href="assets/css/styles.css?=v18">
+  <link rel="stylesheet" href="assets/css/styles.css">
   <link rel="stylesheet" href="https://use.typekit.net/ldl7lwm.css">
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A==" crossorigin=""/>
 </head>
