--- a/src/index.html
+++ b/src/index.html
@@ -285,6 +285,7 @@
         <div id="map" class="footer__map"></div>
       </div>
     </div>
+    <div class="footer__credit"><span>Sitio web hecho por <a class="footer__credit__url cta" href="https://hardcodepunk.be">Hardcodepunk</a></span></div>
   </div>
 </footer>
 <!-- Scripts -->
