--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
 	<meta name="twitter:label1" content="Escrito por">
 	<meta name="twitter:data1" content="Kipu Deluxe">
   <title>Kipu Deluxe — OSTEOPATIA & QUIROMASAJE</title>
-  <meta name="description" content="Kipu Deluxe, práctica de osteopatía y masaje, con respeto por el cuerpo y la mente, ubicada en Barcelona.">
+  <meta name="description" content="Kipu Deluxe, práctica de osteopatía y masaje, con respeto por el cuerpo, la mente y las emociones, ubicada en Barcelona.">
   <!-- Stylesheets -->
   <link rel="stylesheet" href="assets/css/styles.css">
   <link rel="stylesheet" href="https://use.typekit.net/ldl7lwm.css">
@@ -75,7 +75,7 @@
         Kipu<span class="splash__content__title__comma">,</span><br>
         <span class="splash__content__title__sub-title">el tacto que te nutre.</span>
       </h1>
-      <a href="mailto:ncarranzaghh@gmail.com" class="cta">Reservar</a>
+      <a href="https://wa.link/lbs8yi" class="cta">Reservar</a>
     </div>
   </div>
 </section>
@@ -94,7 +94,7 @@
             </div>
             <div class="meta__item meta__price">50</div>
           </div>
-          <a href="mailto:ncarranzaghh@gmail.com" class="cta">Reservar</a>
+          <a href="https://wa.link/lbs8yi" class="cta">Reservar</a>
         </div>
       </div>
       <div class="col col--hide-on-mobile">
@@ -110,13 +110,13 @@
             <div class="meta__item meta__time">60min</div>
             <div class="meta__item meta__price">50</div>
           </div>
-          <a href="mailto:ncarranzaghh@gmail.com" class="cta">Reservar</a>
+          <a href="https://wa.link/lbs8yi" class="cta">Reservar</a>
         </div>
       </div>
       <div class="col">
         <div class="grid__item">
           <h4><span class="highlight--title">Masaje</span> Sport</h4>
-          <p>Tenemos dos variantes demasajes para aquellos amantes del deporte que lo dejan todo a la hora de entrenar. Con el toque especial de ungüento de romero para mayor beneficio. Escoge entre:
+          <p>Tenemos dos variantes de masajes para aquellos amantes del deporte que lo dejan todo a la hora de entrenar. Con el toque especial de ungüento de romero para mayor beneficio. Escoge entre:
             <br><span class="highlight--paragraph">Post-Entreno</span>, para una descarga muscular y mejorar la recuperación.
             <br><span class="highlight--paragraph">Pre-Entreno</span>, donde se preparan las fibras musculares para prevenir las lesiones.
           </p>
@@ -124,7 +124,7 @@
             <div class="meta__item meta__time">60min</div>
             <div class="meta__item meta__price">50</div>
           </div>
-          <a href="mailto:ncarranzaghh@gmail.com" class="cta">Reservar</a>
+          <a href="https://wa.link/lbs8yi" class="cta">Reservar</a>
         </div>
       </div>
     </div>
@@ -137,7 +137,7 @@
             <div class="meta__item meta__time">60min</div>
             <div class="meta__item meta__price">50</div>
           </div>
-          <a href="mailto:ncarranzaghh@gmail.com" class="cta">Reservar</a>
+          <a href="https://wa.link/lbs8yi" class="cta">Reservar</a>
         </div>
       </div>
       <div class="col">
@@ -148,7 +148,7 @@
             <div class="meta__item meta__time">60min</div>
             <div class="meta__item meta__price">50</div>
           </div>
-          <a href="mailto:ncarranzaghh@gmail.com" class="cta">Reservar</a>
+          <a href="https://wa.link/lbs8yi" class="cta">Reservar</a>
         </div>
       </div>
     </div>
@@ -161,7 +161,7 @@
             <div class="meta__item meta__time">60min</div>
             <div class="meta__item meta__price">50</div>
           </div>
-          <a href="mailto:ncarranzaghh@gmail.com" class="cta">Reservar</a>
+          <a href="https://wa.link/lbs8yi" class="cta">Reservar</a>
         </div>
       </div>
       <div class="col">
@@ -172,7 +172,7 @@
             <div class="meta__item meta__time">90min</div>
             <div class="meta__item meta__price">70</div>
           </div>
-          <a href="mailto:ncarranzaghh@gmail.com" class="cta">Reservar</a>
+          <a href="https://wa.link/lbs8yi" class="cta">Reservar</a>
         </div>
       </div>
     </div>
@@ -190,7 +190,7 @@
             <div class="meta__item meta__time">2 sesiones</div>
             <div class="meta__item meta__price">80</div>
           </div>
-          <a href="mailto:ncarranzaghh@gmail.com" class="cta">Reclamar</a>
+          <a href="https://wa.link/lbs8yi" class="cta">Solicitar</a>
         </div>
       </div>
       <div class="col">
@@ -201,7 +201,7 @@
             <div class="meta__item meta__time">4 sesiones</div>
             <div class="meta__item meta__price">150</div>
           </div>
-          <a href="mailto:ncarranzaghh@gmail.com" class="cta">Reclamar</a>
+          <a href="https://wa.link/lbs8yi" class="cta">Solicitar</a>
         </div>
       </div>
       <div class="col">
@@ -212,7 +212,7 @@
             <div class="meta__item meta__time">4 sesiones</div>
             <div class="meta__item meta__price">140</div>
           </div>
-          <a href="mailto:ncarranzaghh@gmail.com" class="cta">Reclamar</a>
+          <a href="https://wa.link/lbs8yi" class="cta">Solicitar</a>
         </div>
       </div>
     </div>
@@ -244,7 +244,7 @@
         <p>Hay mucho que aprender, mucho que <span class="highlight--paragraph">explorar</span>, ¡mucho que descubrir! El cuerpo humano me fascina, como estamos construidos, como funcionamos, como sentimos, conocer aquello que nos hace enfermar, que nos hace mantenernos sanos...</p>
         <p>Las emociones, las vivencias, las creencias, cómo todo ello se transcribe en química, la química de nuestro cuerpo, es fascinante.</p>
         <p>Y como soy curiosa por <span class="highlight--paragraph">naturaleza</span>, ¡siempre querré saber más!</p>
-        <p>Y esta soy yo, y esto soy yo,¡y muchas más y mucho más!... sencilla y compleja... Natalia</p>
+        <p>Y esta soy yo, y esto soy yo, ¡y muchas más y mucho más!... sencilla y compleja... Natalia</p>
         <p><span class="highlight--paragraph"><span class="highlight--dark">Bienvenidos a </span>Kipu<span class="highlight--dark">!</span></p>
       </div>
     </div>
@@ -259,7 +259,7 @@
         <div class="footer__contact">
           <div>
             <h3 class="footer__contact__title">Contáctame</h3>
-            <h4 class="footer__contact__subtitle">ncarranzaghh@gmail.com</h4>
+            <h4 class="footer__contact__subtitle">nataliacarranza@kipudeluxe.es</h4>
           </div>
           <div>
             <h3 class="footer__hours__title">Horarios</h3>
