changed mail and added favion

--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,8 @@
 	<meta name="twitter:card" content="summary_large_image" />
 	<meta name="twitter:label1" content="Escrito por">
 	<meta name="twitter:data1" content="Kipu Deluxe">
+  <link rel="icon" type="image/png" href="assets/favicon/favicon-32x32.png" sizes="32x32" />
+  <link rel="icon" type="image/png" href="assets/favicon/favicon-16x16.png" sizes="16x16" />
   <title>Kipu Deluxe — OSTEOPATIA & QUIROMASAJE</title>
   <meta name="description" content="Kipu Deluxe, práctica de osteopatía y masaje, con respeto por el cuerpo, la mente y las emociones, ubicada en Barcelona.">
   <!-- Stylesheets -->
@@ -259,7 +261,7 @@
         <div class="footer__contact">
           <div>
             <h3 class="footer__contact__title">Contáctame</h3>
-            <h4 class="footer__contact__subtitle">nataliacarranza@kipudeluxe.es</h4>
+            <h4 class="footer__contact__subtitle">natalia@kipudeluxe.es</h4>
           </div>
           <div>
             <h3 class="footer__hours__title">Horarios</h3>
