--- a/src/index.html
+++ b/src/index.html
@@ -186,6 +186,38 @@
     <div class="row">
       <div class="col">
         <div class="grid__item">
+          <h4><span class="highlight--title">Bono</span> 5 + 1</h4>
+          <p>
+            Tus sesiones Kipu para 6 meses.
+          </p>
+          <div class="meta">
+            <div class="meta__item meta__time">
+              5 sesiones +<br>
+              1 de regalo
+            </div>
+            <div class="meta__item meta__price">210</div>
+          </div>
+          <a href="https://wa.link/lbs8yi" class="cta">Solicitar</a>
+        </div>
+      </div>
+      <div class="col">
+        <div class="grid__item">
+          <h4><span class="highlight--title">Bono</span> 10 + 2</h4>
+          <p>
+            Tus sesiones Kipu durante 1 año.
+          </p>
+          <div class="meta">
+            <div class="meta__item meta__time">
+              10 sesiones +<br>
+              2 de regalo
+            </div>
+            <div class="meta__item meta__price">410</div>
+          </div>
+          <a href="https://wa.link/lbs8yi" class="cta">Solicitar</a>
+        </div>
+      </div>
+      <div class="col">
+        <div class="grid__item">
           <h4><span class="highlight--title">Pack</span> Cuidate</h4>
           <p>Dos momentos Kipu por mes solo para ti!</p>
           <div class="meta">
@@ -195,29 +227,14 @@
           <a href="https://wa.link/lbs8yi" class="cta">Solicitar</a>
         </div>
       </div>
-      <div class="col">
-        <div class="grid__item">
-          <h4><span class="highlight--title">Pack</span> Comparte</h4>
-          <p>Comparte cuatro sesiones Kipu entre tú y quien quieras en un plazo de 60 días naturales.</p>
-          <div class="meta">
-            <div class="meta__item meta__time">4 sesiones</div>
-            <div class="meta__item meta__price">150</div>
-          </div>
-          <a href="https://wa.link/lbs8yi" class="cta">Solicitar</a>
-        </div>
-      </div>
-      <div class="col">
-        <div class="grid__item">
-          <h4><span class="highlight--title">Pack</span> Mucho</h4>
-          <p>Te encanta cuidarte y sentir el bienestar, por eso este pack de cuatro sesiones Kipu en un mes es perfecto para ti!</p>
-          <div class="meta">
-            <div class="meta__item meta__time">4 sesiones</div>
-            <div class="meta__item meta__price">140</div>
-          </div>
-          <a href="https://wa.link/lbs8yi" class="cta">Solicitar</a>
-        </div>
-      </div>
     </div>
+    <p>
+      <span class="highlight--paragraph">TÉRMINOS:</span><br>
+      Se abona la totaldad del bono en el momente de la compra.<br>
+      Los bonos son unipersonales.<br>
+      Convertir un bono en multipersonal tiene un agregado de €25 el 5+1 y €55 el 10+2.<br>
+      La validew empieza a correr desde la primera sesión hasta su tiempo indicado, usese o no la totalidad de las sesiones.<br>
+    </p>
   </div>
 </section>
 <section id="what" class="section textblock what">
