fix grammatical arrors in terms

--- a/dest/index.html
+++ b/dest/index.html
@@ -230,10 +230,10 @@
     </div>
     <p>
       <span class="highlight--paragraph">TÉRMINOS:</span><br>
-      Se abona la totaldad del bono en el momente de la compra.<br>
+      Se abona la totaldad del bono en el momento de la compra.<br>
       Los bonos son unipersonales.<br>
       Convertir un bono en multipersonal tiene un agregado de €25 el 5+1 y €55 el 10+2.<br>
-      La validew empieza a correr desde la primera sesión hasta su tiempo indicado, usese o no la totalidad de las sesiones.<br>
+      La validez empieza a correr desde la primera sesión hasta su tiempo indicado, usese o no la totalidad de las sesiones.<br>
     </p>
   </div>
 </section>
