--- a/src/index.html
+++ b/src/index.html
@@ -274,7 +274,7 @@
     <div class="row">
       <div>
         <h3 class="footer__address__title">Kipu osteopatia y masaje</h3>
-        <h4 class="footer__address__subtitle">C/ DIPUTACION 199, 08011 BARCELONA</h4>
+        <h4 class="footer__address__subtitle">ARIBAU 25 entresuelo 3, 08011 BARCELONA</h4>
         <div class="footer__contact">
           <div>
             <h3 class="footer__contact__title">Contáctame</h3>
@@ -287,6 +287,12 @@
             </h4>
             <h4 class="footer__hours__subtitle-2">
               DE 15:00 A 21:00
+            </h4>
+            <h4 class="footer__hours__subtitle">
+              MARTES
+            </h4>
+            <h4 class="footer__hours__subtitle-2">
+              DE 09:00 A 14:00
             </h4>
           </div>
         </div>
