--- a/dest/index.html
+++ b/dest/index.html
@@ -23,7 +23,7 @@
   <title>Kipu Deluxe — OSTEOPATIA & QUIROMASAJE</title>
   <meta name="description" content="Kipu Deluxe, práctica de osteopatía y masaje, con respeto por el cuerpo, la mente y las emociones, ubicada en Barcelona.">
   <!-- Stylesheets -->
-  <link rel="stylesheet" href="assets/css/styles.css">
+  <link rel="stylesheet" href="assets/css/styles.css?v1">
   <link rel="stylesheet" href="https://use.typekit.net/ldl7lwm.css">
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A==" crossorigin=""/>
 </head>
@@ -283,21 +283,22 @@
           <div>
             <h3 class="footer__hours__title">Horarios</h3>
             <h4 class="footer__hours__subtitle">
-              LUNES Y JUEVES
+              LUNES A JUEVES
             </h4>
             <h4 class="footer__hours__subtitle-2">
-              DE 15:00 A 21:00
-            </h4>
-            <h4 class="footer__hours__subtitle">
-              MARTES
+              DE 9:00 A 14:00<br>
+              Y 15:00 A 21:00
             </h4>
             <h4 class="footer__hours__subtitle-2">
-              DE 09:00 A 14:00
+
             </h4>
           </div>
         </div>
         <div class="meta">
-          <span>Pagar en efectivo o Bizum</span>
+          <div class="meta__note">
+            Pagar en efectivo o Bizum
+            <span class="meta__note__sub">Sesiones de urgencia fuera de horario €60</span>
+          </div>
           <div class="flex-container">
             <a href="https://wa.link/lbs8yi" class="social-icon social-icon__img social-icon__whatsapp"></a>
             <a href="https://www.linkedin.com/company/kipu-deluxe/" class="social-icon social-icon__img social-icon__linkedin"></a>
