--- a/dest/index.html
+++ b/dest/index.html
@@ -83,8 +83,8 @@
         Kipu<span class="splash__content__title__comma">,</span><br>
         <span class="splash__content__title__sub-title">el tacto que te nutre.</span>
       </h1>
-      <!-- <button id="openCalendarButton" class="cta">Reservar</button> -->
-      <!-- Start Google Calendar widget -->
+      <a id="openCalendarButton" href="https://wa.link/lbs8yi" class="cta">Reservar</a>
+      <!-- Start Google Calendar widget
       <link href="https://calendar.google.com/calendar/scheduling-button-script.css" rel="stylesheet">
       <script src="https://calendar.google.com/calendar/scheduling-button-script.js" async></script>
       <script>
@@ -92,16 +92,14 @@
         var target = document.currentScript;
         window.addEventListener('load', function() {
           calendar.schedulingButton.load({
-            url: 'https://calendar.google.com/calendar/appointments/schedules/AcZssZ0jd_vXDjQN-NSb7uDbX3tVr3ILi6VrjHh0pJKSn00W3TlyTvkkhJH2edljqNa01hv4vFs7Jfd2?gv=true',
-            color: '#c0aee8',
+            url: 'https://calendar.google.com/calendar/u/1?cid=bmF0YWxpYXN0b3JtODRAZ21haWwuY29t',
             label: 'Reservar',
-            class: 'cta',
             target,
           });
         });
       })();
       </script>
-      <!-- End Google Calendar widget -->
+      End Google Calendar widget -->
     </div>
   </div>
 </section>
